# zeus-code

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md  TODO.md  build.rs
adr/: 2026-06-16-self-compacting-context.md  2026-06-16-slash-command-compact.md  2026-06-16-slash-command-model.md
defaults/: config.toml
docs/: architecture.md  implementation-plan.md  rust-crate-mapping.md
plans/: 2026-06-15-self-compacting-context.md  2026-06-15-shell-command-integration.md  2026-06-16-slash-command-model.md
src/: cli.rs  config.rs  diff_display.rs  headless.rs  lib.rs  logging.rs  loop.rs  main.rs  notify.rs  permissions.rs  session.rs  shell_intercept.rs  themes.rs  turn.rs
src/context/: agent_mds.rs  git.rs  loader.rs  mod.rs  skills.rs
src/core/: compaction.rs  errors.rs  handoff.rs  mod.rs  types.rs
src/llm/: base.rs  mod.rs  models.rs
src/llm/providers/: anthropic.rs  azure_ai_foundry.rs  copilot.rs  mock.rs  mod.rs  openai_codex_responses.rs  openai_completions.rs  openai_responses.rs
src/tools/: base.rs  bash.rs  edit.rs  find.rs  grep.rs  mod.rs  read.rs  utils.rs  web_fetch.rs  web_search.rs  write.rs
src/ui/: app.rs  autocomplete.rs  blocks.rs  chat.rs  commands.rs  export.rs  formatting.rs  input.rs  launch.rs  markdown.rs  mod.rs  model_popup.rs  model_switch.rs  styles.rs  welcome.rs  widgets.rs
tests/: config_tests.rs  integration_tests.rs
