[package]
name = "zeus-code"
version = "0.1.0"
edition = "2024"
description = "Minimal coding agent harness — Rust port of Kon"
license = "MIT"
repository = "https://github.com/0xku/zeus-code"

[dependencies]
# CLI
clap = { version = "4", features = ["derive"] }

# TUI
ratatui = { version = "0.29", features = ["unstable-rendered-line-info"] }
crossterm = "0.28"

# Async runtime
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
tokio-util = "0.7"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# HTTP
reqwest = { version = "0.12", features = ["stream", "json", "rustls-tls"], default-features = false }

# Utilities
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
regex = "1"
dirs = "6"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
syntect = "5"
comrak = "0.32"
base64 = "0.22"
which = "7"
similar = "2"
image = "0.25"
strum = { version = "0.26", features = ["derive"] }
futures = "0.3"
async-trait = "0.1"
anyhow = "1"
parking_lot = "0.12"
ignore = "0.4"
once_cell = "1"
dashmap = "6"
libc = "0.2"

[dev-dependencies]
tempfile = "3"
pretty_assertions = "1"
tokio-test = "0.4"
